[package]
name = "bevy-cable"
version = "0.1.2"
authors = ["Tom Pridham <pridham.tom@gmail.com>"]
edition = "2021"
description = "A simple cable implementation for the bevy game engine"
readme = "README.md"
keywords = ["bevy", "rope", "cable", "physics", "ragdoll"]
license = "MIT"

[dependencies]
bevy = { version = "0.6.1", default-features = false, features = ["render"] }

[dev-dependencies]
bevy = "0.6.1"
